@@ -26,6 +26,8 @@ Version 1.4.1 -- CVS
   - Added Faroese translation
   - Fix for #719619 (xhtml-style css definitions weren't working)
   - Fix bug #722933 where resuming a draft message would lose the reference headers.
+  - Fix that sending of read receipts failed when JavaScript on and comp in new off
+    (#738130).
 
 Version 1.4.0 -- 3 April 2003
 -----------------------------
